// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Versioning should get lowest target versions 1`] = `
Array [
  Object {
    "parsedVersion": 7,
    "target": "node",
    "version": "7",
  },
  Object {
    "parsedVersion": 50.5,
    "target": "firefox",
    "version": "50.5",
  },
  Object {
    "parsedVersion": 20,
    "target": "chrome",
    "version": "20",
  },
]
`;

exports[`Versioning should support multi env config in browserslist package.json 1`] = `
Array [
  Object {
    "parsedVersion": 6.2,
    "target": "samsung",
    "version": "6.2-6.4",
  },
  Object {
    "parsedVersion": 11,
    "target": "safari",
    "version": "11",
  },
  Object {
    "parsedVersion": 55,
    "target": "opera",
    "version": "55",
  },
  Object {
    "parsedVersion": 11.5,
    "target": "op_mob",
    "version": "11.5",
  },
  Object {
    "parsedVersion": 0,
    "target": "op_mini",
    "version": "all",
  },
  Object {
    "parsedVersion": 2.5,
    "target": "kaios",
    "version": "2.5",
  },
  Object {
    "parsedVersion": 11,
    "target": "ios_saf",
    "version": "11.0-11.2",
  },
  Object {
    "parsedVersion": 10,
    "target": "ie_mob",
    "version": "10",
  },
  Object {
    "parsedVersion": 9,
    "target": "ie",
    "version": "9",
  },
  Object {
    "parsedVersion": 60,
    "target": "firefox",
    "version": "60",
  },
  Object {
    "parsedVersion": 15,
    "target": "edge",
    "version": "15",
  },
  Object {
    "parsedVersion": 72,
    "target": "chrome",
    "version": "72",
  },
  Object {
    "parsedVersion": 7,
    "target": "bb",
    "version": "7",
  },
  Object {
    "parsedVersion": 7.12,
    "target": "baidu",
    "version": "7.12",
  },
  Object {
    "parsedVersion": 67,
    "target": "android",
    "version": "67",
  },
  Object {
    "parsedVersion": 11.8,
    "target": "and_uc",
    "version": "11.8",
  },
  Object {
    "parsedVersion": 1.2,
    "target": "and_qq",
    "version": "1.2",
  },
  Object {
    "parsedVersion": 67,
    "target": "and_ff",
    "version": "67",
  },
  Object {
    "parsedVersion": 74,
    "target": "and_chr",
    "version": "74",
  },
]
`;

exports[`Versioning should support resolving browserslist config in subdirectory 1`] = `
Array [
  Object {
    "parsedVersion": 70,
    "target": "chrome",
    "version": "70",
  },
]
`;

exports[`Versioning should support resolving browserslist config in subdirectory 2`] = `
Array [
  Object {
    "parsedVersion": 9.2,
    "target": "samsung",
    "version": "9.2",
  },
  Object {
    "parsedVersion": 12.1,
    "target": "safari",
    "version": "12.1",
  },
  Object {
    "parsedVersion": 58,
    "target": "opera",
    "version": "58",
  },
  Object {
    "parsedVersion": 46,
    "target": "op_mob",
    "version": "46",
  },
  Object {
    "parsedVersion": 0,
    "target": "op_mini",
    "version": "all",
  },
  Object {
    "parsedVersion": 2.5,
    "target": "kaios",
    "version": "2.5",
  },
  Object {
    "parsedVersion": 12.2,
    "target": "ios_saf",
    "version": "12.2",
  },
  Object {
    "parsedVersion": 11,
    "target": "ie_mob",
    "version": "11",
  },
  Object {
    "parsedVersion": 11,
    "target": "ie",
    "version": "11",
  },
  Object {
    "parsedVersion": 67,
    "target": "firefox",
    "version": "67",
  },
  Object {
    "parsedVersion": 18,
    "target": "edge",
    "version": "18",
  },
  Object {
    "parsedVersion": 75,
    "target": "chrome",
    "version": "75",
  },
  Object {
    "parsedVersion": 10,
    "target": "bb",
    "version": "10",
  },
  Object {
    "parsedVersion": 7.12,
    "target": "baidu",
    "version": "7.12",
  },
  Object {
    "parsedVersion": 67,
    "target": "android",
    "version": "67",
  },
  Object {
    "parsedVersion": 11.8,
    "target": "and_uc",
    "version": "11.8",
  },
  Object {
    "parsedVersion": 1.2,
    "target": "and_qq",
    "version": "1.2",
  },
  Object {
    "parsedVersion": 67,
    "target": "and_ff",
    "version": "67",
  },
  Object {
    "parsedVersion": 74,
    "target": "and_chr",
    "version": "74",
  },
]
`;

exports[`Versioning should support single array config in browserslist package.json 1`] = `
Array [
  Object {
    "parsedVersion": 6.2,
    "target": "samsung",
    "version": "6.2-6.4",
  },
  Object {
    "parsedVersion": 11,
    "target": "safari",
    "version": "11",
  },
  Object {
    "parsedVersion": 55,
    "target": "opera",
    "version": "55",
  },
  Object {
    "parsedVersion": 11.5,
    "target": "op_mob",
    "version": "11.5",
  },
  Object {
    "parsedVersion": 0,
    "target": "op_mini",
    "version": "all",
  },
  Object {
    "parsedVersion": 2.5,
    "target": "kaios",
    "version": "2.5",
  },
  Object {
    "parsedVersion": 11,
    "target": "ios_saf",
    "version": "11.0-11.2",
  },
  Object {
    "parsedVersion": 10,
    "target": "ie_mob",
    "version": "10",
  },
  Object {
    "parsedVersion": 9,
    "target": "ie",
    "version": "9",
  },
  Object {
    "parsedVersion": 60,
    "target": "firefox",
    "version": "60",
  },
  Object {
    "parsedVersion": 15,
    "target": "edge",
    "version": "15",
  },
  Object {
    "parsedVersion": 66,
    "target": "chrome",
    "version": "66",
  },
  Object {
    "parsedVersion": 7,
    "target": "bb",
    "version": "7",
  },
  Object {
    "parsedVersion": 7.12,
    "target": "baidu",
    "version": "7.12",
  },
  Object {
    "parsedVersion": 67,
    "target": "android",
    "version": "67",
  },
  Object {
    "parsedVersion": 11.8,
    "target": "and_uc",
    "version": "11.8",
  },
  Object {
    "parsedVersion": 1.2,
    "target": "and_qq",
    "version": "1.2",
  },
  Object {
    "parsedVersion": 67,
    "target": "and_ff",
    "version": "67",
  },
  Object {
    "parsedVersion": 74,
    "target": "and_chr",
    "version": "74",
  },
]
`;

exports[`Versioning should support single version config in browserslist package.json 1`] = `
Object {
  "0": Object {
    "parsedVersion": 8,
    "target": "safari",
    "version": "8",
  },
  "1": Object {
    "parsedVersion": 9,
    "target": "ie",
    "version": "9",
  },
  "2": Object {
    "parsedVersion": 20,
    "target": "firefox",
    "version": "20",
  },
  "3": Object {
    "parsedVersion": 32,
    "target": "chrome",
    "version": "32",
  },
}
`;

exports[`Versioning should support string config in rule option 1`] = `
Array [
  Object {
    "parsedVersion": 4,
    "target": "samsung",
    "version": "4",
  },
  Object {
    "parsedVersion": 5.1,
    "target": "safari",
    "version": "5.1",
  },
  Object {
    "parsedVersion": 57,
    "target": "opera",
    "version": "57",
  },
  Object {
    "parsedVersion": 46,
    "target": "op_mob",
    "version": "46",
  },
  Object {
    "parsedVersion": 0,
    "target": "op_mini",
    "version": "all",
  },
  Object {
    "parsedVersion": 2.5,
    "target": "kaios",
    "version": "2.5",
  },
  Object {
    "parsedVersion": 11.3,
    "target": "ios_saf",
    "version": "11.3-11.4",
  },
  Object {
    "parsedVersion": 11,
    "target": "ie_mob",
    "version": "11",
  },
  Object {
    "parsedVersion": 11,
    "target": "ie",
    "version": "11",
  },
  Object {
    "parsedVersion": 60,
    "target": "firefox",
    "version": "60",
  },
  Object {
    "parsedVersion": 17,
    "target": "edge",
    "version": "17",
  },
  Object {
    "parsedVersion": 72,
    "target": "chrome",
    "version": "72",
  },
  Object {
    "parsedVersion": 7.12,
    "target": "baidu",
    "version": "7.12",
  },
  Object {
    "parsedVersion": 67,
    "target": "android",
    "version": "67",
  },
  Object {
    "parsedVersion": 11.8,
    "target": "and_uc",
    "version": "11.8",
  },
  Object {
    "parsedVersion": 1.2,
    "target": "and_qq",
    "version": "1.2",
  },
  Object {
    "parsedVersion": 67,
    "target": "and_ff",
    "version": "67",
  },
  Object {
    "parsedVersion": 74,
    "target": "and_chr",
    "version": "74",
  },
]
`;
